@@ -1,3 +1,12 @@
+2006-11-05  Lars Hansen  <larsh@soem.dk>
+
+	* tramp.el (with-parsed-tramp-file-name): Correct debug spec.
+	Highlight as keyword.
+	(tramp-do-copy-or-rename-file): Correct data for
+	'file-already-exists.  Don't call tramp-method-out-of-band-p for
+	local files.
+	(tramp-touch): Quote file name.
+
 2006-10-21  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-yn-prompt-regexp): Add question from plink.
